--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <attr name="motionInterpolatorPersistent" format="reference"/>
-    <attr name="motionInterpolatorIncoming" format="reference"/>
-    <attr name="motionInterpolatorOutgoing" format="reference"/>
+    <attr name="motionInterpolatorPersistent" format="reference" />
+    <attr name="motionInterpolatorIncoming" format="reference" />
+    <attr name="motionInterpolatorOutgoing" format="reference" />
+
+
+    <declare-styleable name="StartAnimatable">
+        <attr name="android:src" />
+    </declare-styleable>
+
+
 </resources>
